<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/danceTypeAdd"
        android:textColor="#191970"
        android:textSize="50px"
        android:gravity="center_horizontal"
        android:padding="50px"
    />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/danceTypeTitle"
        android:textColor="#010b13"
        android:textSize="40px"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/danceTypeTitle"
        android:textColor="#1b1b1b"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/danceTypeDescription"
        android:textColor="#010b13"
        android:textSize="40px"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/danceTypeDescription"
        android:textColor="#1b1b1b"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/addNewDanceType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/addNewDanceType"
            />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/secondActivityButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/secondActivityButton"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            />
    </RelativeLayout>

</LinearLayout>
