<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:padding="50px"
        android:text="@string/homeTitle"
        android:textSize="50px" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/danceExplorationButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/homeButtonToLab1"
            android:layout_centerHorizontal="true"
            />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/requestActivityButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/requestTitle"
            android:layout_centerHorizontal="true"
            />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/Lab3Activity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Lab3Activity"
            android:layout_centerHorizontal="true"
            />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/adminHomeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/adminHomeButton"
            android:layout_centerHorizontal="true"
            />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/userHomeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="User"
            android:layout_centerHorizontal="true"
            />
    </RelativeLayout>
</LinearLayout>