<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TableLayout
            android:id="@+id/table"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TableRow
                android:padding="10dp">
                <TextView
                    android:text="@string/x"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingEnd="5dp"
                    android:paddingRight="5dp"
                    />

                <TextView
                    android:id="@+id/x_value"
                    android:text="-"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </TableRow>
            <TableRow
                android:padding="10dp">
                <TextView
                    android:text="@string/y"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingEnd="5dp"
                    android:paddingRight="5dp"
                    />

                <TextView
                    android:id="@+id/y_value"
                    android:text="-"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </TableRow>
            <TableRow
                android:padding="10dp">
                <TextView
                    android:text="@string/z"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingEnd="5dp"
                    android:paddingRight="5dp"
                    />

                <TextView
                    android:id="@+id/z_value"
                    android:text="-"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </TableRow>
        </TableLayout>
        <RelativeLayout
            android:id="@+id/relative"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/table"
            android:layout_centerVertical="true">
            <TextView
                android:id="@+id/position"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:padding="5dp" />
            <TextView
                android:id="@+id/degrees"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:padding="5dp"
                android:layout_below="@id/position"/>
        </RelativeLayout>
        <ImageView
            android:id="@+id/imageViewCompass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"/>
    </RelativeLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/start_and_stop"
        android:text="@string/start"/>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TableRow android:padding="10dp">
            <TextView
                android:text="GPS coordinates:"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingEnd="5dp"
                android:paddingRight="5dp"/>
            <TextView
                android:id="@+id/coordinatesGPS"
                android:text="-"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="10dp" />
        </TableRow>
    </TableLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TableRow android:padding="10dp">
            <TextView
                android:text="Geo-position:"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingEnd="5dp"
                android:paddingRight="5dp"/>
            <TextView
                android:id="@+id/coordinatesNETWORK"
                android:text="-"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>
    </TableLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/take_photo"
        android:text="@string/takePhoto"/>
    <FrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextureView
            android:id="@+id/textureView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </FrameLayout>
</LinearLayout>